# NIS2-Compliance-Engine

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/controls/: det-01-monitorizacao-eventos.yaml  det-02-detecao-intrusoes.yaml  det-03-gestao-logs.yaml  gov-01-responsavel-ciberseguranca.yaml  gov-02-orgaos-gestao.yaml  gov-03-politica-seguranca.yaml  gov-04-risco-cadeia-abastecimento.yaml  gov-05-avaliacao-eficacia.yaml  gov-06-conformidade-notificacao.yaml  idn-01-inventario-ativos.yaml  idn-02-avaliacao-risco.yaml  idn-03-classificacao-informacao.yaml  idn-04-gestao-fornecedores.yaml  prt-01-mfa.yaml  prt-02-gestao-vulnerabilidades.yaml  prt-03-segmentacao-redes.yaml  prt-04-gestao-acessos.yaml  prt-05-criptografia.yaml  prt-06-seguranca-rh.yaml  prt-07-formacao-sensibilizacao.yaml  prt-08-protecao-endpoints.yaml  prt-10-copias-seguranca.yaml  (+10 more)
examples/: answers_camara.yaml  demo_deliverables.py  demo_gap_report.py  entity_camara.yaml  incident_camara.yaml  scenarios_camara.yaml
nis2_engine/: __init__.py  assessment.py  audit.py  charts.py  classification.py  cli.py  deadlines.py  dossier.py  history.py  incident.py  iso27001.py  loader.py  models.py  profiles.py  reporting.py  risk_matrix.py  roadmap.py  soa.py  webapp.py
tests/: test_assessment.py  test_audit.py  test_charts.py  test_classification.py  test_cli.py  test_deadlines.py  test_dossier.py  test_form.py  test_history.py  test_incident.py  test_iso27001.py  test_loader.py  test_profiles.py  test_reporting.py  test_risk_matrix.py  test_roadmap.py  test_soa.py  test_webapp.py
(+29 files in other folders)
